# GitHub_Search_Tool

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
data/examples/: sample_payload.json  sample_payload_previous.json
src/gh_hotspot_analyzer/: __init__.py  analyzer.py  cli.py  config.py  github_client.py  report.py
tests/: test_analyzer.py
